# rules_js

./: .bazelrc.common  .bazelversion  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml
e2e/external_npm_package/: BUILD.bazel  WORKSPACE  index.js  package.json
e2e/external_npm_package/workspace/: BUILD.bazel  WORKSPACE  binary.js
js/private/coverage/bundle/: package.json
npm/private/: npm_link_package.bzl
